RT-32239: Merged graphics tests